exports[`test should render a default component 1`] = `
<button
  className="terra-Module terra-Module--default"
  onClick={[Function]}>
  Terra, 
  default
</button>
`;

exports[`test should render a primary component 1`] = `
<button
  className="terra-Module terra-Module--primary"
  onClick={[Function]}>
  Terra, 
  primary
</button>
`;

exports[`test should toggle the class u-selected on default 1`] = `
<button
  className="terra-Module terra-Module--default"
  onClick={[Function]}>
  Terra, 
  default
</button>
`;

exports[`test should toggle the class u-selected on default 2`] = `
<button
  className="terra-Module terra-Module--default u-selected"
  onClick={[Function]}>
  Terra, 
  default
</button>
`;

exports[`test should toggle the class u-selected on default 3`] = `
<button
  className="terra-Module terra-Module--default"
  onClick={[Function]}>
  Terra, 
  default
</button>
`;

exports[`test should toggle the class u-selected on primary 1`] = `
<button
  className="terra-Module terra-Module--primary"
  onClick={[Function]}>
  Terra, 
  primary
</button>
`;

exports[`test should toggle the class u-selected on primary 2`] = `
<button
  className="terra-Module terra-Module--primary u-selected"
  onClick={[Function]}>
  Terra, 
  primary
</button>
`;

exports[`test should toggle the class u-selected on primary 3`] = `
<button
  className="terra-Module terra-Module--primary"
  onClick={[Function]}>
  Terra, 
  primary
</button>
`;
